fix: triv reward font size on mobile

--- a/src/styles/triv.css
+++ b/src/styles/triv.css
@@ -96,8 +96,8 @@ section.leaderboard {
   font-weight: bold;
   font-stretch: normal;
   font-style: normal;
-  line-height: 1.53;
-  letter-spacing: -0.36px;
+  line-height: normal;
+  letter-spacing: -0.24px;
   color: #fff;
 }
 
